# nexus

./: .gitignore  .gitmodules  .rustfmt.toml  AGENTS.md  CLAUDE.md  CONCEPTS.md  Cargo.toml  LICENSE  README.md  STRATEGY.md  opencode.json  package.json  pnpm-lock.yaml  skills-lock.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/nexus42/: Cargo.toml  build.rs
apps/nexus42/src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  session_capture.rs
apps/nexus42/tests/: chronology_cli.rs  cli_agent.rs  creator_run_lock.rs  creator_run_preset_help.rs  cron_cli.rs  host_call_smoke.rs  kb_adopt_cas.rs  kb_adopt_lock.rs  reference_refresh_cli.rs  regression.rs  works_status_lock_holder.rs  world_kb_alias.rs  world_kb_authz.rs  world_kb_promotion_cli.rs
crates/nexus-acp-host/: AGENTS.md  Cargo.toml
crates/nexus-acp-host/src/: client.rs  error.rs  lib.rs  localset_bridge.rs  policy.rs  registry.rs  session_manager.rs  skills.rs  transport.rs
crates/nexus-acp-host/tests/: acp_registry.rs  acp_session_lifecycle.rs
crates/nexus-agent-host/: AGENTS.md  Cargo.toml
crates/nexus-agent-host/src/: config.rs  error.rs  ids.rs  lib.rs
crates/nexus-cloud-domain/: AGENTS.md  Cargo.toml
crates/nexus-cloud-domain/src/: errors.rs  lib.rs  pairing.rs  user.rs
crates/nexus-cloud-sync/: AGENTS.md  Cargo.toml
crates/nexus-cloud-sync/src/: canonical_hash.rs  command.rs  conflict.rs  delta_bundle.rs  errors.rs  lib.rs  outbox.rs  pool.rs  precheck.rs  pull_apply.rs
crates/nexus-cloud-sync/tests/: body_size_limit.rs  cloud_domain_usage.rs  explore_client.rs  publish_client.rs  sync_conflict_resolve.rs  sync_pull_client.rs  sync_push_pull_loop.rs  world_fork_snapshot_client.rs
crates/nexus-contracts/: AGENTS.md  Cargo.toml
crates/nexus-contracts/src/: enum_conversions.rs  lib.rs  placeholder.rs
crates/nexus-contracts/tests/: core_context_forward_compat.rs  schedule_types_roundtrip.rs  schema_drift_detection.rs  schema_rename_compliance.rs
crates/nexus-creator/: AGENTS.md  Cargo.toml
crates/nexus-creator-memory/: AGENTS.md  Cargo.toml
crates/nexus-creator-memory/src/: errors.rs  experience_aggregation.rs  lib.rs  long_term_memory.rs  memory_io.rs  memory_item.rs  personality_sync.rs  review.rs  soul.rs  soul_io.rs  soul_narrative.rs
crates/nexus-creator/src/: creator.rs  errors.rs  lib.rs  local_identity.rs
crates/nexus-daemon-runtime/: AGENTS.md  Cargo.toml  build.rs
crates/nexus-daemon-runtime/benches/: dispatch_latency.rs
crates/nexus-daemon-runtime/src/: architecture_assertions.rs  auto_chronology.rs  boot.rs  capability_registry.rs  cron_supervisor.rs  lib.rs  refresh_scheduler.rs  stale_findings_watcher.rs  static_assets.rs  test_support.rs  test_utils.rs  worker_provider.rs
crates/nexus-daemon-runtime/tests/: agent_tool_api.rs  agent_tool_production_wiring.rs  auto_chronology_task.rs  chapters_api.rs  cron_cas_retry.rs  cron_lock_integration.rs  cron_supervisor_task.rs  cross_caller_e2e.rs  daemon_boot_llm_wiring.rs  error_envelope.rs  findings_api.rs  fl_e_schedule_api.rs  master_decision_timeout.rs  memory_dto_roundtrip.rs  memory_pagination_bounded.rs  memory_review_fragments_api.rs  multi_work_switch.rs  outline_api.rs  outline_patch.rs  pagination_info_parity.rs  runtime_lock.rs  selection_pool.rs  sort_contract.rs  strategy_patch.rs  works_api.rs  workspace_occ_concurrent.rs  world_kb_patch.rs  world_kb_relationships.rs
crates/nexus-domain/: Cargo.toml
crates/nexus-domain/src/: consistency.rs  context_assembly.rs  contract_assertions.rs  creator.rs  degradation.rs  errors.rs  experience_aggregation.rs  fork_branch.rs  key_block.rs  lib.rs  local_identity.rs  long_term_memory.rs  manuscript_state.rs  memory_io.rs  memory_item.rs  pairing.rs  personality_sync.rs  reference_source.rs  review.rs  review_quality.rs  runtime_guard.rs  runtime_mode.rs  soul.rs  soul_io.rs  source_anchor.rs  story_manifest.rs  timeline_event.rs  user.rs  world.rs  world_membership.rs
crates/nexus-domain/tests/: runtime_compatibility.rs
crates/nexus-home-layout/: AGENTS.md  Cargo.toml
crates/nexus-home-layout/src/: lib.rs
crates/nexus-kb/: AGENTS.md  Cargo.toml
crates/nexus-kb/src/: errors.rs  extract_finalize.rs  extract_sync.rs  key_block.rs  lib.rs  query.rs  source_anchor.rs  store.rs  validation.rs
crates/nexus-knowledge/: AGENTS.md  Cargo.toml
crates/nexus-knowledge/src/: errors.rs  knowledge.rs  lib.rs  reference_source.rs  store.rs
crates/nexus-local-db/: AGENTS.md  Cargo.toml
crates/nexus-local-db/migrations/: 20260417_000001_initial.sql  20260418_orchestration_sessions.sql  20260419_creator_schedules.sql  20260420_outbox_tables.sql  20260427_drop_device_code_sessions.sql  20260511_world_stories.sql  20260523_reference_store_split.sql  20260524_narrative_worlds.sql  20260525_kb_key_blocks.sql  20260526_knowledge_entries.sql  20260527_kb_extract_jobs.sql  20260530_creator_prompt_injections.sql  20260604_works_table.sql  20260605_works_idempotency.sql  20260606_works_stage_columns.sql  202606070001_work_chapters.sql  202606070002_works_novel_profile.sql  202606080001_force_gates_audit.sql  202606080002_creator_schedules_work_id.sql  202606080003_work_chapters_composite_index.sql  202606090001_works_auto_chain_checkpoint.sql  202606090002_findings.sql  202606090003_works_auto_review_master.sql  202606100001_kb_extract_jobs_artifact_locator.sql  202606100002_findings_check_constraints.sql  202606100002_v141_multi_work_locks.sql  202606100003_v141_inspiration_items.sql  202606100004_v141_pool_inspiration_indexes.sql  202606110001_v142_multi_volume_pk.sql  202606150001_findings_kind_rule_suggestion.sql  (+22 more)
crates/nexus-moment-context-assembly/: AGENTS.md  Cargo.toml
crates/nexus-narrative/: AGENTS.md  Cargo.toml
crates/nexus-orchestration/: AGENTS.md  Cargo.toml
crates/nexus-sync/: Cargo.toml
crates/nexus-wasm-host/: .gitignore  AGENTS.md  Cargo.toml  build.rs
crates/nexus42/: AGENTS.md  Cargo.toml  build.rs
crates/nexus42d/: AGENTS.md  Cargo.toml
modules/basic-combat/: Cargo.toml  manifest.json
(+4043 files in other folders)
