[workspace]
members = [
    "crates/nexus-acp-host",
    "crates/nexus-contracts",
    "crates/nexus-domain",
    "crates/nexus-home-layout",
    "crates/nexus-orchestration",
    "crates/nexus42",
    "crates/nexus42d",
    "crates/nexus-sync",
    "crates/nexus-local-db",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["42ch"]
license = "GPL-3.0-only"
repository = "https://github.com/42ch/nexus"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
url = "2"
strum = { version = "0.26", features = ["derive"] }
pulldown-cmark = "0.12"
pulldown-cmark-frontmatter = "0.2"
serde_yaml = "0.9"
async-trait = "0.1"
tempfile = "3"
