[workspace]
members = [
    "crates/nexus-acp-host",
    "crates/nexus-agent-host",
    "crates/nexus-contracts",
    "crates/nexus-creator",
    "crates/nexus-daemon-runtime",
    "crates/nexus-domain",
    "crates/nexus-home-layout",
    "crates/nexus-orchestration",
    "crates/nexus42",
    "crates/nexus-cloud-sync",
    "crates/nexus-local-db",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["42ch"]
license = "GPL-3.0-only"
repository = "https://github.com/42ch/nexus"

# --- Lint configuration ---
# All workspace crates inherit these via [lints] workspace = true.
# Enable pedantic + nursery groups; selectively allow overly noisy lints.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Pedantic group
pedantic = { level = "warn", priority = -1 }
# Nursery group
nursery = { level = "warn", priority = -1 }

# Selectively allow lints that are too noisy or opinionated for this project.
# Each allow should have a brief justification; revisit periodically.
missing_docs_in_private_items = "allow"     # pre-1.0: will enable later
allow_attributes_without_reason = "allow"   # too noisy during rapid iteration
# module_name_repetitions = "allow"         # uncomment if too noisy
# similar_names = "allow"                   # uncomment if too noisy

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
url = "2"
strum = { version = "0.26", features = ["derive"] }
pulldown-cmark = "0.12"
pulldown-cmark-frontmatter = "0.2"
serde_yaml = "0.9"
async-trait = "0.1"
tempfile = "3"
jsonrpsee = { version = "0.26", default-features = false, features = ["server-core", "client-core", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
toml = "0.8"
statig = { version = "0.3", features = ["async"] }
futures-util = "0.3"
tokio-stream = "0.1"
blake3 = "1"
handlebars = "6"
which = "8"
regex = "1"
subtle = { version = "2", default-features = false }
