[package]
name = "nexus42"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Nexus CLI — creative world-building command-line interface"

[lints]
workspace = true

[lib]
name = "nexus42"
path = "src/lib.rs"

[[bin]]
name = "nexus42"
path = "src/main.rs"

[dependencies]
nexus-contracts = { path = "../../crates/nexus-contracts" }
nexus-orchestration = { path = "../../crates/nexus-orchestration" }
nexus-moment-context-assembly = { path = "../../crates/nexus-moment-context-assembly", features = ["cloud-stage"] }
nexus-creator-memory = { path = "../../crates/nexus-creator-memory" }
nexus-creator = { path = "../../crates/nexus-creator" }
nexus-cloud-sync = { path = "../../crates/nexus-cloud-sync", features = ["legacy-sync"] }
nexus-home-layout = { path = "../../crates/nexus-home-layout" }
nexus-local-db = { path = "../../crates/nexus-local-db" }
nexus-acp-host = { path = "../../crates/nexus-acp-host" }
nexus-daemon-runtime = { path = "../../crates/nexus-daemon-runtime" }
nexus-narrative = { path = "../../crates/nexus-narrative" }
nexus-kb = { path = "../../crates/nexus-kb" }
nexus-knowledge = { path = "../../crates/nexus-knowledge" }
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = "0.8"
toml_edit = "0.22"
reqwest = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
dirs = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
# ACP SDK consumed via nexus-acp-host (worker-only linkage — see spec §11.3)
# agent-client-protocol = "=0.10.4"  — REMOVED: consumed through nexus-acp-host
# tokio-util, async-trait, async-broadcast — consumed through nexus-acp-host
# nix — also used directly by daemon.rs for process management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["signal", "process"] }

dialoguer = "0.11"
tempfile = "3"
regex = "1"
base64 = "0.22"
# V1.50 T-A P0 T2: cron validation + IANA TZ parsing (novel-writing staggering)
cron = { workspace = true }
chrono-tz = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
wiremock = "0.6"
