[package]
name = "nexus-cloud-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
## Enable the legacy cloud sync pipeline (outbox, push/pull, platform HTTP).
## Daemon consumers should NOT enable this — it's for CLI/cloud-line only.
legacy-sync = []

[dependencies]
nexus-contracts = { path = "../nexus-contracts" }
nexus-home-layout = { path = "../nexus-home-layout" }
nexus-local-db = { path = "../nexus-local-db" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
tempfile = "3"
wiremock = "0.5"
