[package]
name = "nexus-daemon-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Nexus Daemon Runtime — lifecycle, subsystems, and local API"

[lints]
workspace = true

[dependencies]
nexus-home-layout = { path = "../nexus-home-layout" }
nexus-contracts = { path = "../nexus-contracts" }
nexus-creator = { path = "../nexus-creator" }
nexus-local-db = { path = "../nexus-local-db" }
nexus-orchestration = { path = "../nexus-orchestration" }
nexus-agent-host = { path = "../nexus-agent-host" }
nexus-creator-memory = { path = "../nexus-creator-memory" }
nexus-narrative = { path = "../nexus-narrative" }
nexus-kb = { path = "../nexus-kb" }
nexus-knowledge = { path = "../nexus-knowledge" }
nexus-moment-context-assembly = { path = "../nexus-moment-context-assembly" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
statig = { workspace = true }
tempfile = "3"
async-trait = "0.1"
tokio-util = { workspace = true }
subtle = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
regex = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
axum-test = "15"
graph-flow = "=0.2.3"
nexus-orchestration = { path = "../nexus-orchestration" }
serial_test = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dispatch_latency"
harness = false

[features]
test-support = []
