[package]
name = "nexus-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nexus-contracts = { path = "../nexus-contracts" }
nexus-home-layout = { path = "../nexus-home-layout" }
nexus-creator = { path = "../nexus-creator" }
nexus-creator-memory = { path = "../nexus-creator-memory" }
nexus-kb = { path = "../nexus-kb" }
nexus-knowledge = { path = "../nexus-knowledge" }
nexus-narrative = { path = "../nexus-narrative" }
nexus-cloud-domain = { path = "../nexus-cloud-domain" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
strum.workspace = true
pulldown-cmark = { workspace = true }
pulldown-cmark-frontmatter = { workspace = true }
serde_yaml = { workspace = true }
tracing.workspace = true

[dev-dependencies]
jsonschema = "0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
