[package]
name = "nexus-home-layout"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared ADR-014 path layout helpers (~/.nexus42/creators/.../workspaces/...)"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
