[package]
name = "nexus-local-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sqlx = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
uuid = { workspace = true }
blake3 = { workspace = true }
nexus-contracts = { path = "../nexus-contracts" }
nexus-home-layout = { path = "../nexus-home-layout" }
nexus-narrative = { path = "../nexus-narrative" }
nexus-kb = { path = "../nexus-kb" }
nexus-knowledge = { path = "../nexus-knowledge" }
async-trait.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
