[package]
name = "nexus-narrative"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nexus-contracts = { path = "../nexus-contracts" }
nexus-kb = { path = "../nexus-kb" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
strum.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
