[package]
name = "nexus-orchestration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Orchestration engine (graph-flow adapter + capability registry + worker manager)."

[lints]
workspace = true

[dependencies]
graph-flow = "=0.2.3"                                    # rig feature NOT enabled (per best-practices §1.2 pin policy)
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "time"] }
# sqlx: workspace dep is declared + feature-gated by WS8 T1 (runtime-tokio, sqlite, macros, migrate, chrono, uuid).
# This crate re-uses the workspace dep; do not add local features.
sqlx = { workspace = true }
chrono = { workspace = true }
# jsonrpsee: per crate-selection-best-practices.md §3.1.
# Features: server-core, client-core, macros. NO http-server, NO ws-server.
jsonrpsee = { workspace = true }
tokio-util = { workspace = true }
futures-util = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
nexus-contracts = { path = "../nexus-contracts" }
nexus-home-layout = { path = "../nexus-home-layout" }
nexus-kb = { path = "../nexus-kb" }
nexus-local-db = { path = "../nexus-local-db" }
nexus-creator-memory = { path = "../nexus-creator-memory" }
blake3 = { workspace = true }
sha2 = "0.10"
include_dir = "0.7"
handlebars = { workspace = true }
anyhow = { workspace = true }
# WS2 R4: SIGTERM support for graceful worker shutdown (Unix only).
# R5: gated behind cfg(unix) for Windows build compatibility.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile = { workspace = true }
