[package]
name = "nexus-orchestration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Orchestration engine (graph-flow adapter + capability registry + worker manager)."

[lints]
workspace = true

[dependencies]
graph-flow = "=0.2.3"                                    # rig feature NOT enabled (per best-practices §1.2 pin policy)
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "time", "net"] }
# sqlx: workspace dep is declared + feature-gated by WS8 T1 (runtime-tokio, sqlite, macros, migrate, chrono, uuid).
# This crate re-uses the workspace dep; do not add local features.
sqlx = { workspace = true }
chrono = { workspace = true }
# jsonrpsee: per crate-selection-best-practices.md §3.1.
# Features: server-core, client-core, macros. NO http-server, NO ws-server.
jsonrpsee = { workspace = true }
tokio-util = { workspace = true }
futures-util = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
nexus-contracts = { path = "../nexus-contracts" }
nexus-home-layout = { path = "../nexus-home-layout" }
nexus-kb = { path = "../nexus-kb" }
nexus-local-db = { path = "../nexus-local-db" }
# V1.60 P0: DF-46 — world.state.query uses the NarrativeGateway trait for
# world/timeline reads via SqliteNarrativeGateway.
nexus-narrative = { path = "../nexus-narrative" }
nexus-creator-memory = { path = "../nexus-creator-memory" }
# V1.50 T-A P1: cron expression parsing + IANA TZ conversion for the daemon-side
# cron evaluator (novel-writing three-role staggering). Same workspace deps as
# `nexus42` (T-A P0 cron CLI validation).
cron = { workspace = true }
chrono-tz = { workspace = true }
# V1.50 T-B P1: review-time KB candidate extraction heuristic (quality_loop).
regex = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
include_dir = "0.7"
handlebars = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
# WS2 R4: SIGTERM support for graceful worker shutdown (Unix only).
# R5: gated behind cfg(unix) for Windows build compatibility.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
# Integration tests under tests/ need their own access to async runtime, DB pool
# and serde helpers — these are also in [dependencies] but `tests/` are external crates.
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
# R-V149P1-02 (V1.50): `tests/review_report.rs` mixes tracing-capture tests
# (set_default/with_default thread-local subscribers) with parallel siblings
# that share the tokio blocking-thread pool used by sqlx. Under
# `--test-threads=8` the capture layer intermittently dropped events the
# function emitted (~15-20% failure rate, QC3 measured 2/10 on
# origin/main @ be27111b). Marking every test in that binary
# `#[serial_test::serial]` makes the whole file mutually exclusive within
# the binary (same effect as `--test-threads=1` for this one binary;
# other binaries still parallelise normally). `serial_test` is already a
# dev-dep in `nexus-daemon-runtime` with the same version pin.
serial_test = "3"
sqlx = { workspace = true }
serde_json = { workspace = true }
nexus-local-db = { path = "../nexus-local-db" }
# V1.58 P0 T14 (R-V156P1-L005): criterion benchmark for registry.refresh latency.
criterion = { version = "0.5", features = ["html_reports"] }

# V1.58 P0 T14 (R-V156P1-L005): registry.refresh latency benchmark (cold + warm cache).
[[bench]]
name = "registry_refresh_latency"
harness = false
