[package]
name = "nexus-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nexus-contracts = { path = "../nexus-contracts" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
