[package]
name = "nexus-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nexus-contracts = { path = "../nexus-contracts" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
deadpool-sqlite = "0.8"
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
tempfile = "3"
wiremock = "0.5"
