[package]
name = "nexus42"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Nexus CLI — creative world-building command-line interface"

[[bin]]
name = "nexus42"
path = "src/main.rs"

[dependencies]
nexus-contracts = { path = "../nexus-contracts" }
nexus-domain = { path = "../nexus-domain" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3"
