[package]
name = "nexus42"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Nexus CLI — creative world-building command-line interface"

[lib]
name = "nexus42"
path = "src/lib.rs"

[[bin]]
name = "nexus42"
path = "src/main.rs"

[dependencies]
nexus-contracts = { path = "../nexus-contracts" }
nexus-domain = { path = "../nexus-domain" }
nexus-sync = { path = "../nexus-sync" }
nexus-home-layout = { path = "../nexus-home-layout" }
nexus-local-db = { path = "../nexus-local-db" }
nexus-acp-host = { path = "../nexus-acp-host" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
toml_edit = "0.22"
reqwest = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
dirs = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
sha2 = "0.10"
hex = "0.4"
# ACP SDK consumed via nexus-acp-host (worker-only linkage — see spec §11.3)
# agent-client-protocol = "=0.10.4"  — REMOVED: consumed through nexus-acp-host
# tokio-util, async-trait, async-broadcast — consumed through nexus-acp-host
# nix — also used directly by daemon.rs for process management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["signal", "process"] }

dialoguer = "0.11"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
wiremock = "0.5"
